# R.A.M.A--Research-Automation-Using-MCP-Architechture-Agentic-AI

Backend/: .env  README.md  app.db  requirements.txt
Backend/app/: __init__.py  main.py  mcp_client.py
Backend/app/core/: __init__.py  config.py
Backend/app/db/: __init__.py  session.py
Backend/app/schemas/: auth.py  research.py
Frontend/rama/: DESIGN_SYSTEM.md  IMPLEMENTATION_GUIDE.md  package-lock.json  package.json
Frontend/rama/public/: index.html
Frontend/rama/src/: App.css  App.js
Frontend/rama/src/components/ComprehensiveSummaries/: ComprehensiveSummaries.css  ComprehensiveSummaries.js
Frontend/rama/src/components/IEEECitations/: IEEECitations.css  IEEECitations.js
Frontend/rama/src/components/InteractiveMindMap/: InteractiveMindMap.css  InteractiveMindMap.js
Frontend/rama/src/components/Login/: Login.css  Login.js
Frontend/rama/src/components/Register/: Register.js
Frontend/rama/src/components/ResearchInterface/: ResearchInterface.css  ResearchInterface.js  ResearchInterface_old.js
Frontend/rama/src/components/SampleResearchPaper/: SampleResearchPaper.css  SampleResearchPaper.js
Frontend/rama/src/components/Workspace/: Workspace.css  Workspace.js
mcp-server/: pyproject.toml
mcp-server/src/rama_research_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-server/src/rama_research_server/: __init__.py  server.py
