[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rama-research-mcp-server"
version = "0.1.0"
description = "RAMA Research MCP Server for automated research queries"
authors = [
    {name = "RAMA Project", email = "noreply@example.com"}
]
dependencies = [
    "mcp",
    "httpx",
    "beautifulsoup4",
    "aiofiles",
    "python-dotenv",
    "scholarly",
    "arxiv",
    "requests"
]

[project.scripts]
rama-research-server = "rama_research_server.server:main"
